Clean up
-> Item filtering now uses `IngredientJS`
-> PonderBuilder now has the items instead of just the id's